--- a/app/src/main/res/layout/activity_exif.xml
+++ b/app/src/main/res/layout/activity_exif.xml
@@ -31,6 +31,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/placeholder"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
