--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="selected_image">#FF0000</color>
     <color name="overlayed_view">#CC7895AB</color>
     <color name="exif_data_item">#566B7A</color>
+    <color name="image_recycler_background">#555555</color>
     <color name="selected_exif_data_item">#354049</color>
     <color name="blue">#1F54DB</color>
 </resources>
