--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -134,7 +134,6 @@
     </LinearLayout>
 
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/selected_images_gallery_button"
         style="@style/MaterialButtonStyle"
@@ -149,22 +148,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <ImageButton
-        android:contentDescription="@string/info_window_opener"
         android:id="@+id/info_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:background="@drawable/rounded_button"
+        android:contentDescription="@string/info_window_opener"
         android:src="@drawable/ic_question_mark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toEndOf="@id/selected_images_gallery_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.975"
-        app:layout_constraintHorizontal_bias="0.975"
+        app:layout_constraintTop_toTopOf="@+id/selected_images_gallery_button"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
